--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "auth-website",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "auth-website": "file:",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-timestamp": "^6.0.0",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
