--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/material": "^5.15.20",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "auth-website": "file:",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -22,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-timestamp": "^6.0.0",
     "source-map-loader": "^5.0.0",
+    "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
