--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-timestamp": "^6.0.0",
+    "recharts": "^2.15.3",
     "source-map-loader": "^5.0.0",
     "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
